<resources>
    <string name="app_name">NIM</string>
    <string name="_1_vs_ia">1 VS IA</string>
    <string name="jeu_de_nim">Jeu de Nim</string>
    <string name="_1_vs_1">1 VS 1</string>
    <string name="easy">Easy</string>
    <string name="choose_your_difficulty">Choose Your Difficulty</string>
    <string name="player">Player :</string>
    <string name="player_1">Player 1</string>
    <string name="computer">Computer :</string>
    <string name="hard">hard</string>
    <string name="artificial_intelligence">Artificial Intelligence</string>
    <string name="start">Start</string>
    <string name="player_2">Player 2 :</string>
    <string name="player_1_choose">Player 1</string>
    <string name="player_2_name">Player 2</string>
    <string name="player_1_choose_name">Player 1 :</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_20">20</string>
    <string name="exit">Exit</string>
    <string name="play">play</string>
    <string name="win">WIN</string>
    <string name="textview">TextView</string>
</resources>
